fix: lazy load and focus visible

--- a/src/styles/color-schemes/_switch.scss
+++ b/src/styles/color-schemes/_switch.scss
@@ -68,6 +68,10 @@ input#color-scheme {
     pointer-events: none;
   }
 
+  &:focus:not(:focus-visible):before {
+    display: none;
+  }
+
   &:checked ~ * .cs-#{$ns}-switch {
     box-shadow: none;
 
